# xfce4-polkit

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  meson.build  xfce4-polkit-authentication-agent-1.desktop.in
src/: Makefile.am  xfce-polkit-listener.c  xfce-polkit.c  xfce4-polkit-listener.c  xfce4-polkit.c
